--- a/classes/_fluentdynameh_.fluentdynameh.html
+++ b/classes/_fluentdynameh_.fluentdynameh.html
@@ -130,7 +130,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L51">FluentDynameh.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L94">FluentDynameh.ts:94</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">client<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DynamoDB</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L53">FluentDynameh.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L96">FluentDynameh.ts:96</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L53">FluentDynameh.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L96">FluentDynameh.ts:96</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +182,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L94">FluentDynameh.ts:94</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L136">FluentDynameh.ts:136</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -211,7 +211,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L72">FluentDynameh.ts:72</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L115">FluentDynameh.ts:115</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -234,7 +234,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L99">FluentDynameh.ts:99</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L141">FluentDynameh.ts:141</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">DeleteTableInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">DeleteTableOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L57">FluentDynameh.ts:57</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L100">FluentDynameh.ts:100</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -277,7 +277,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L62">FluentDynameh.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L105">FluentDynameh.ts:105</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -300,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L77">FluentDynameh.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L120">FluentDynameh.ts:120</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -329,7 +329,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L83">FluentDynameh.ts:83</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L126">FluentDynameh.ts:126</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -346,22 +346,16 @@
 					<a name="transactwriteitems" class="tsd-anchor"></a>
 					<h3>transact<wbr>Write<wbr>Items</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">transact<wbr>Write<wbr>Items<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>input<span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TransactWriteItemsInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TransactWriteItemsOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">transact<wbr>Write<wbr>Items<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L89">FluentDynameh.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L132">FluentDynameh.ts:132</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>input: <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">[]</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TransactWriteItemsInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TransactWriteItemsOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -375,7 +369,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L67">FluentDynameh.ts:67</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L110">FluentDynameh.ts:110</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -401,7 +395,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L104">FluentDynameh.ts:104</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L146">FluentDynameh.ts:146</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">UpdateTimeToLiveInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">UpdateTimeToLiveOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -506,6 +500,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
+						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
 					</li>
 				</ul>
 			</nav>
