--- a/modules/_fluentdynameh_.html
+++ b/modules/_fluentdynameh_.html
@@ -73,6 +73,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentdynameh.html" class="tsd-kind-icon">Fluent<wbr>Dynameh</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a></li>
 							</ul>
 						</section>
 					</div>
@@ -130,6 +131,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="../classes/_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
+						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
 					</li>
 				</ul>
 			</nav>
