--- a/classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html
+++ b/classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html
@@ -106,6 +106,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#deleteitem" class="tsd-kind-icon">delete<wbr>Item</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#execute" class="tsd-kind-icon">execute</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter"><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#fortable" class="tsd-kind-icon">for<wbr>Table</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#putitem" class="tsd-kind-icon">put<wbr>Item</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#updateitemfromactions" class="tsd-kind-icon">update<wbr>Item<wbr>From<wbr>Actions</a></li>
 							</ul>
@@ -119,13 +120,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, client<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, client<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, request<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">TransactWriteItemsInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L55">FluentDynameh.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L54">FluentDynameh.ts:54</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -135,6 +136,9 @@
 								</li>
 								<li>
 									<h5>client: <span class="tsd-signature-type">DynamoDB</span></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> request: <span class="tsd-signature-type">TransactWriteItemsInput</span><span class="tsd-signature-symbol"> =&nbsp;{TransactItems: []}</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a></h4>
@@ -150,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">client<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DynamoDB</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L57">FluentDynameh.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L58">FluentDynameh.ts:58</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TransactWriteItemsInput</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L54">FluentDynameh.ts:54</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L59">FluentDynameh.ts:59</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -170,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L57">FluentDynameh.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L57">FluentDynameh.ts:57</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,7 +191,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L79">FluentDynameh.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L86">FluentDynameh.ts:86</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -210,10 +214,39 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L60">FluentDynameh.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L63">FluentDynameh.ts:63</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TransactWriteItemsOutput</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter">
+					<a name="fortable" class="tsd-anchor"></a>
+					<h3>for<wbr>Table</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter">
+						<li class="tsd-signature tsd-kind-icon">for<wbr>Table&lt;U&gt;<span class="tsd-signature-symbol">(</span>fluentDynameh<span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluentdynameh.html" class="tsd-signature-type">FluentDynameh</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">U</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">U</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L70">FluentDynameh.ts:70</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-type-parameters-title">Type parameters</h4>
+							<ul class="tsd-type-parameters">
+								<li>
+									<h4>U<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+								</li>
+							</ul>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>fluentDynameh: <a href="_fluentdynameh_.fluentdynameh.html" class="tsd-signature-type">FluentDynameh</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">U</span><span class="tsd-signature-symbol">&gt;</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">U</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -227,7 +260,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L67">FluentDynameh.ts:67</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L74">FluentDynameh.ts:74</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -250,7 +283,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c498446/src/FluentDynameh.ts#L73">FluentDynameh.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L80">FluentDynameh.ts:80</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -342,6 +375,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#execute" class="tsd-kind-icon">execute</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter">
+								<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#fortable" class="tsd-kind-icon">for<wbr>Table</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html#putitem" class="tsd-kind-icon">put<wbr>Item</a>
