--- a/classes/_fluentdynameh_.fluentdynameh.html
+++ b/classes/_fluentdynameh_.fluentdynameh.html
@@ -130,7 +130,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L101">FluentDynameh.ts:101</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L110">FluentDynameh.ts:110</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">client<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DynamoDB</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L103">FluentDynameh.ts:103</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L112">FluentDynameh.ts:112</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L103">FluentDynameh.ts:103</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L112">FluentDynameh.ts:112</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +182,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L143">FluentDynameh.ts:143</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L152">FluentDynameh.ts:152</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -211,7 +211,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L122">FluentDynameh.ts:122</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L131">FluentDynameh.ts:131</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -234,7 +234,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L148">FluentDynameh.ts:148</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L157">FluentDynameh.ts:157</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">DeleteTableInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">DeleteTableOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L107">FluentDynameh.ts:107</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L116">FluentDynameh.ts:116</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -277,7 +277,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L112">FluentDynameh.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L121">FluentDynameh.ts:121</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -300,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L127">FluentDynameh.ts:127</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L136">FluentDynameh.ts:136</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -329,7 +329,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L133">FluentDynameh.ts:133</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L142">FluentDynameh.ts:142</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -352,7 +352,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L139">FluentDynameh.ts:139</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L148">FluentDynameh.ts:148</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -369,7 +369,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L117">FluentDynameh.ts:117</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L126">FluentDynameh.ts:126</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -395,7 +395,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/9b4881a/src/FluentDynameh.ts#L153">FluentDynameh.ts:153</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L162">FluentDynameh.ts:162</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">UpdateTimeToLiveInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">UpdateTimeToLiveOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -503,6 +503,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
+						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilderscoped.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<wbr>Scoped</a>
 					</li>
 				</ul>
 			</nav>
