--- a/classes/_fluentdynameh_.fluentdynameh.html
+++ b/classes/_fluentdynameh_.fluentdynameh.html
@@ -111,6 +111,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#query" class="tsd-kind-icon">query</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#scan" class="tsd-kind-icon">scan</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#transactwriteitems" class="tsd-kind-icon">transact<wbr>Write<wbr>Items</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#transactwriteitemsmultitable" class="tsd-kind-icon">transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#updateitemfromactions" class="tsd-kind-icon">update<wbr>Item<wbr>From<wbr>Actions</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_fluentdynameh_.fluentdynameh.html#updatetimetolive" class="tsd-kind-icon">update<wbr>Time<wbr>ToLive</a></li>
 							</ul>
@@ -130,7 +131,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L110">FluentDynameh.ts:110</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L124">FluentDynameh.ts:124</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">client<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">DynamoDB</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L112">FluentDynameh.ts:112</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L126">FluentDynameh.ts:126</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +166,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L112">FluentDynameh.ts:112</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L126">FluentDynameh.ts:126</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +183,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L152">FluentDynameh.ts:152</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L170">FluentDynameh.ts:170</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -211,7 +212,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L131">FluentDynameh.ts:131</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L145">FluentDynameh.ts:145</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -234,7 +235,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L157">FluentDynameh.ts:157</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L175">FluentDynameh.ts:175</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">DeleteTableInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">DeleteTableOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -251,7 +252,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L116">FluentDynameh.ts:116</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L130">FluentDynameh.ts:130</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -277,7 +278,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L121">FluentDynameh.ts:121</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L135">FluentDynameh.ts:135</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -300,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L136">FluentDynameh.ts:136</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L150">FluentDynameh.ts:150</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -329,7 +330,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L142">FluentDynameh.ts:142</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L156">FluentDynameh.ts:156</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -352,10 +353,27 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L148">FluentDynameh.ts:148</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L162">FluentDynameh.ts:162</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-signature-type">FluentTransactWriteItemsBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="transactwriteitemsmultitable" class="tsd-anchor"></a>
+					<h3>transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-signature-type">FluentTransactWriteItemsMultiTableBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L166">FluentDynameh.ts:166</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-signature-type">FluentTransactWriteItemsMultiTableBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -369,7 +387,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L126">FluentDynameh.ts:126</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L140">FluentDynameh.ts:140</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -395,7 +413,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L162">FluentDynameh.ts:162</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L180">FluentDynameh.ts:180</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">UpdateTimeToLiveInput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">UpdateTimeToLiveOutput</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">__type</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -489,6 +507,9 @@
 								<a href="_fluentdynameh_.fluentdynameh.html#transactwriteitems" class="tsd-kind-icon">transact<wbr>Write<wbr>Items</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_fluentdynameh_.fluentdynameh.html#transactwriteitemsmultitable" class="tsd-kind-icon">transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_fluentdynameh_.fluentdynameh.html#updateitemfromactions" class="tsd-kind-icon">update<wbr>Item<wbr>From<wbr>Actions</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
@@ -505,7 +526,7 @@
 						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilderscoped.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<wbr>Scoped</a>
+						<a href="_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a>
 					</li>
 				</ul>
 			</nav>
