--- a/classes/_fluentdynameh_.fluentrequestbuilder.html
+++ b/classes/_fluentdynameh_.fluentrequestbuilder.html
@@ -131,7 +131,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L11">FluentDynameh.ts:11</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L11">FluentDynameh.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -198,7 +198,7 @@
 					<div class="tsd-signature tsd-kind-icon">request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TRequest</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L15">FluentDynameh.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L15">FluentDynameh.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -208,7 +208,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L14">FluentDynameh.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L14">FluentDynameh.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -225,7 +225,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L41">FluentDynameh.ts:41</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L41">FluentDynameh.ts:41</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -248,7 +248,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L46">FluentDynameh.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L46">FluentDynameh.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -271,7 +271,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L36">FluentDynameh.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L36">FluentDynameh.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -294,7 +294,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L21">FluentDynameh.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L21">FluentDynameh.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -311,7 +311,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ad3511e/src/FluentDynameh.ts#L32">FluentDynameh.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/FluentDynameh.ts#L32">FluentDynameh.ts:32</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -406,7 +406,7 @@
 						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="_fluentdynameh_.fluenttransactwriteitemsbuilderscoped.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<wbr>Scoped</a>
+						<a href="_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a>
 					</li>
 				</ul>
 			</nav>
