--- a/modules/_fluentdynameh_.html
+++ b/modules/_fluentdynameh_.html
@@ -74,7 +74,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentdynameh.html" class="tsd-kind-icon">Fluent<wbr>Dynameh</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilderscoped.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<wbr>Scoped</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a></li>
 							</ul>
 						</section>
 					</div>
@@ -137,7 +137,7 @@
 						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilderscoped.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder<wbr>Scoped</a>
+						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a>
 					</li>
 				</ul>
 			</nav>
